lang/tests/contract/ui/fail/30-invalid-meta-info-key-1.stderr
error: unknown parameter: `invalid_key`
 --> $DIR/30-invalid-meta-info-key-1.rs:3:43
  |
3 | #[liquid::contract(version = "1.0.0-rc2", invalid_key = "whatever")]
  |                                           ^^^^^^^^^^^
